k8s/was/ticket-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-backend-deploy
  namespace: ticketing
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ticket-backend
  template:
    metadata:
      labels:
        app: ticket-backend
    spec:
      serviceAccountName: ticket-backend-sa
      containers:
      - name: python-backend
        image: REPLACEMENT_IMAGE
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "100m"
            memory: "200Mi"
          limits:
            cpu: "500m"
            memory: "600Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-backend-svc
  namespace: ticketing
spec:
  type: ClusterIP
  selector:
    app: ticket-backend
  ports:
  - port: 8000
    targetPort: 8000
