k8s/was/ticket-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-frontend-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ticket-frontend
  template:
    metadata:
      labels:
        app: ticket-frontend
    spec:
      containers:
      - name: nginx-frontend
        # 💡 새로 만든 1.06 버전 명시 (403 Forbidden 해결된 버전)
        image: leeseonghoon234/ticket-web:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        - containerPort: 443
        resources:
          requests:
            cpu: "100m"      # 최소 보장 CPU
            memory: "128Mi"  # 최소 보장 메모리
          limits:
            cpu: "250m"      # 최대 사용 가능 CPU
            memory: "256Mi"  # 최대 사용 가능 메모리
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-frontend-svc
  annotations:
    # AWS Load Balancer Controller가 NLB를 생성하도록 지정
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    # API Gateway VPC Link와 연결 시 클라이언트 IP 유지를 위해 설정
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
spec:
  type: LoadBalancer
  selector:
    app: ticket-frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  externalTrafficPolicy: Local
